Added local TTS adapter with tests

--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,5 @@ logs/*
 database/*
 backend/tests/test_files/tts.wav
 backend/tests/test_files/tts.mp3
+backend/tests/test_files/azure_tts.wav
+backend/tests/test_files/tts_local.wav
