--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,5 @@ backend/tests/test_files/tts.mp3
 backend/tests/test_files/azure_tts.wav
 backend/tests/test_files/tts_local.wav
 backend/tests/test_files/elevenlabs_tts.wav
+backend/tests/test_files/local_tts2.wav
+backend/tests/test_files/elevenlabs_tts.wav
