--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,10 +13,11 @@ RUN npm install
 # Copy the rest of the application files
 COPY . .
 
-# RUN npm run build
+RUN npm run build
 
 # Expose the port the app runs on
-EXPOSE 3000
+EXPOSE 4173
 
 # Command to run the application
-CMD ["npm", "run", "dev", "--host"]
+# CMD ["npm", "run", "dev", "--host"]
+CMD ["npm", "run", "preview"]
